config/infra/knative/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
  labels:
    istio-injection: "enabled"
