config/infra/knative/base/patch-ingress-gateway.yaml
# Knative makes changes to the gateway that are not merge compatible with the gateway in the base manifest.
# If these resources are committed to a GitOps repo, Flux will, through no fault of its own, overwrite knative changes to the gateway
# The same is true if someone were to `kubectl apply -f` a newer version of the manifest.
# See also: https://github.com/knative-sandbox/net-istio/issues/218
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: knative-ingress-gateway
  namespace: knative-serving
  annotations:
    fluxcd.io/ignore: "true"
